--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header"> <!--Seccion principal, portada de la pagina-->
         <nav class="navbar my-container">
             <a href="index.html" class="nav-logo">
-                <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"/>
+                <img src="./imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"/>
             </a>
         <div class="menu-toggle">☰</div>
             <ul class="nav-menu">
