--- a/html/gestion-clientes.html
+++ b/html/gestion-clientes.html
@@ -40,28 +40,50 @@
         <div id="clientesContainer"></div>
         <p id="noClientsMsg" style="display: none; text-align: center; margin-top: 2rem; color: #555;">No hay clientes registrados.</p>
     </div>
-
-    <footer class="footer">
+<footer class="footer">
         <div class="container footer__container">
+            <!--redes sociales-->
             <div class="footer__section">
                 <h4 class="footer__title">Redes Sociales</h4>
                 <nav class="footer__socials">
-                    <a href="https://www.instagram.com/universoagencia/" target="_blank" class="footer__social-link">@universoagencia</a>
-                    <a href="https://www.linkedin.com/in/tu_usuario" target="_blank" class="footer__social-link">LinkedIn</a>
+                    <!--ig-->
+                    <a href="https://www.instagram.com/universoagencia/" target="_blank" rel="noopener" aria-label="Instagram" class="footer__social-link">
+                        <img src="../imagenes/footer/instagram.png" alt="Instagram" class="social-icon"/>@universoagencia
+                    </a>
+
+                    <!--LinkedIn-->
+                    <a href="https://www.linkedin.com/in/tu_usuario" target="_blank" rel="noopener" aria-label="LinkedIn" class="footer__social-link">
+                        <img src="../imagenes/footer/linkedin.png" alt="LinkedIn" class="social-icon"/>LinkedIn
+                    </a>
                 </nav>
             </div>
+
+            <!-- contacto -->
             <div class="footer__section">
                 <h4 class="footer__title">Contáctanos</h4>
                 <nav class="footer__socials">
-                    <a href="mailto:universoagenciaok@gmail.com" class="footer__social-link">universoagenciaok@gmail.com</a>
-                    <a href="https://wa.me/" target="_blank" class="footer__social-link">WhatsApp</a>
+                    <a href="universoagenciaok@gmail.com" target="_blank" rel="noopener" aria-label="Instagram" class="footer__social-link">
+                        <img src="../imagenes/footer/correo.png" alt="Correo Electrónico Universo" class="social-icon">
+                        universoagenciaok@gmail.com
+                    </a>
+                    <a href="https://wa.me/" target="_blank" rel="noopener" aria-label="WhatsApp"class="footer__social-link">
+                        <img src="../imagenes/footer/whatsapp.png" alt="WhatsApp" class="social-icon" />WhatsApp
+                    </a>  
                 </nav>
             </div>
+
+            <!-- horario de atención -->
             <div class="footer__section">
                 <h4 class="footer__title">Horario de Atención</h4>
-                <p class="footer__hours">Lunes a Viernes<br>9:00 – 18:00</p>
-            </div>
+                    <p class="footer__hours">
+                        <img src="../imagenes/footer/reloj-de-pared.png" alt="Horario" class="social-icon"/>
+                        Lunes a Viernes<br/>
+                        9:00 – 18:00
+                    </p>
+                </div>
         </div>
+
+        <!-- Línea de derechos reservados -->
         <div class="footer__bottom">
             <p>© 2025 Universo Agencia. Todos los derechos reservados.</p>
         </div>
