--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style-nosotros.css">
 </head>
 <body>
-    <header class="header"> <!--Seccion principal, portada de la pagina-->
+    <header class="header">
         <nav class="navbar my-container">
             <a href="../index.html" class="nav-logo">
                 <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"/>
@@ -34,12 +34,72 @@
     </header>
 
     <main>
-        <section>
-            <h1>NOSOTROS</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed vitae esse autem explicabo blanditiis dolor, ex aspernatur doloremque! Sit aliquid consequuntur hic nobis officia alias dolor mollitia omnis fugit repellat!</p>
+        <section class="hero-nosotros">
+            <div class="hero-nosotros__content">
+                <h1>Nuestra Esencia</h1>
+                <p class="header-p">Más que una agencia, un equipo de creadores apasionados.</p>
+            </div>
+        </section>
+
+        <section class="story-section">
+            <div class="story-flex my-container">
+                    <div class="story-content">
+                    <h2>Una Agencia de Amigos con un Propósito</h2>
+                    <p>
+                        Somos un grupo de profesionales del diseño, del marketing, del mundo digital y de las redes.
+                        Pero antes que eso, somos amigos. Nos unimos con una visión clara: formar una agencia que
+                        vaya más allá de lo convencional. Ofrecemos una <strong>vuelta de tuerca creativa</strong> a
+                        cada cliente, porque creemos que en cada marca existe un potencial único esperando ser
+                        descubierto. Nuestra meta es encontrarlo y hacerlo brillar para que se diferencie del resto.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="pillars-section my-container">
+            <h2>Nuestros Pilares</h2>
+            <div class="mission-vision-wrapper">
+                <div class="mission-card">
+                    <h3>Misión</h3>
+                    <p>Potenciar marcas a través de estrategias creativas y soluciones digitales que inspiren y generen un impacto memorable.</p>
+                </div>
+                <div class="mission-card">
+                    <h3>Visión</h3>
+                    <p>Ser el socio estratégico de referencia para empresas que buscan crecer, innovar y liderar en el ecosistema digital.</p>
+                </div>
+            </div>
+            <div class="values-grid">
+                <div class="value-card">
+                    <div class="value-icon">💡</div>
+                    <h3>Creatividad</h3>
+                    <p>Buscamos ideas frescas, soluciones originales y ángulos inesperados que hagan que tu marca destaque y conecte de verdad.</p>
+                </div>
+                <div class="value-card">
+                    <div class="value-icon">🤝</div>
+                    <h3>Equipo</h3>
+                    <p>Nos sumamos a tu marca como parte del proceso. Escuchamos, proponemos y trabajamos juntos para que cada decisión tenga sentido.</p>
+                </div>
+                <div class="value-card">
+                    <div class="value-icon">🎯</div>
+                    <h3>Estratégia</h3>
+                    <p>Priorizamos lo que realmente importa. Cada acción nace de una visión clara y una intención estratégica alineada a tus objetivos reales.</p>
+                </div>
+                <div class="value-card">
+                    <div class="value-icon">🔥</div>
+                    <h3>Compromiso</h3>
+                    <p>Nos dedicamos a crear proyectos con dedicación, cuidado y responsabilidad.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="cta-section">
+            <div class="my-container cta-content">
+                <h2>¿Listo para encontrar tu diferencial?</h2>
+                <p>Hablemos sobre cómo podemos llevar tu marca al siguiente nivel.</p>
+                <a href="./contacto.html" class="cta-button">Vamos a Crear Juntos</a>
+            </div>
         </section>
     </main>
-
     <footer class="footer">
         <div class="container footer__container">
             <!--redes sociales-->
@@ -83,6 +143,7 @@
                 </div>
         </div>
 
+        <!-- Línea de derechos reservados -->
         <div class="footer__bottom">
             <p>© 2025 Universo Agencia. Todos los derechos reservados.</p>
         </div>
