act servicios y nosotros

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -35,6 +35,7 @@
 
     <main>
         <section class="hero-nosotros">
+            <img src="../imagenes/nosotros.jpeg"  class="hero_img" alt="corpo meeting">
             <div class="hero-nosotros__content">
                 <h1>Nuestra Esencia</h1>
                 <p class="header-p">Más que una agencia, un equipo de creadores apasionados.</p>
@@ -45,7 +46,7 @@
             <div class="story-flex my-container">
                     <div class="story-content">
                     <h2>Una Agencia de Amigos con un Propósito</h2>
-                    <p>
+                    <p class="story_p">
                         Somos un grupo de profesionales del diseño, del marketing, del mundo digital y de las redes.
                         Pero antes que eso, somos amigos. Nos unimos con una visión clara: formar una agencia que
                         vaya más allá de lo convencional. Ofrecemos una <strong>vuelta de tuerca creativa</strong> a
@@ -70,22 +71,22 @@
             </div>
             <div class="values-grid">
                 <div class="value-card">
-                    <div class="value-icon">💡</div>
+                    <img src="../imagenes/pensamiento-logico.png" class="iconos">
                     <h3>Creatividad</h3>
                     <p>Buscamos ideas frescas, soluciones originales y ángulos inesperados que hagan que tu marca destaque y conecte de verdad.</p>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">🤝</div>
+                    <img src="../imagenes/colaboracion.png" class="iconos">
                     <h3>Equipo</h3>
                     <p>Nos sumamos a tu marca como parte del proceso. Escuchamos, proponemos y trabajamos juntos para que cada decisión tenga sentido.</p>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">🎯</div>
+                    <img src="../imagenes/estrategia.png" class="iconos">
                     <h3>Estratégia</h3>
                     <p>Priorizamos lo que realmente importa. Cada acción nace de una visión clara y una intención estratégica alineada a tus objetivos reales.</p>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">🔥</div>
+                    <img src="../imagenes/apreton-de-manos.png" class="iconos">
                     <h3>Compromiso</h3>
                     <p>Nos dedicamos a crear proyectos con dedicación, cuidado y responsabilidad.</p>
                 </div>
