--- a/html/servicios.html
+++ b/html/servicios.html
@@ -48,7 +48,8 @@
 
   <main class="servicios-main">
     <section class="hero-servicios">
-      <div class="my-container">
+      <img src="../imagenes/servicios-img.jpeg" class="hero_img">
+      <div class="hero-servicio__content">
         <h1>Nuestros Servicios</h1>
         <p>Descubre cómo podemos ayudarte a potenciar tu marca y alcanzar tus objetivos.</p>
       </div>
@@ -73,7 +74,7 @@
                         <img src="../imagenes/carrusel-servicios/branding/zetty-rossi.svg" alt="Logo Zetty Rossi" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="../imagenes/carrusel-servicios/branding/Imagen 1.jpg" alt="Noblo Logo" />
+                        <img src="../imagenes/logos/seacost-food.svg" alt="Logo Seacost food" />
                     </div>
                     <div class="swiper-slide">
                         <img src="../imagenes/logos/H&H-Alimentos.svg" alt="Logo H&H" />
@@ -249,6 +250,13 @@
             </div>
         </div>
     </section>
+
+        <section class="cta-section">
+            <div class="my-container cta-content">
+                <h2>Universo es lo que estás buscando, estamos acá para acompañarte.</h2>
+                <a href="./contacto.html" class="cta-button">Contactános</a>
+            </div>
+        </section>
   </main>
 
   <footer class="footer">
