--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h3>Branding</h3>
             </div>
             <div class="carta" id="disenio-grafico">
-                <img src="./imagenes/pensamiento-logico.png" class="iconos">
+                <img src="./imagenes/logo.png" class="iconos">
                 <h3>Diseño Gráfico</h3>
             </div>
             <div class="carta" id="disenio-web">
